--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -62,6 +62,8 @@
     </div>
   </div>
 </section>
+
+
 <!----------Breadcrumb end---------->
 <div class="" *ngIf="product">
   <!----------Product Details Section Starts---------->
@@ -70,9 +72,55 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 product_detail_left-col">
           <div class="product">
-            <div class = "img-container">
-              <img id = "imageBox" (click)="rotate($event)" [src]="product.image" alt="{{product.image}}" width="100%">
+
+            <!-- <ngx-slick-carousel class="carousel"
+            #slickModal="slick-carousel"
+            [config]="slideConfigImg" >
+            <div ngxSlickItem  class="slide slider_content">
+              <div class = "product-card">
+                <div>
+                  <img (click)="open($event)" src="https://rug.webtech-evolution.com/admin/public/storage/media/tF7tAUeQZ0piFTkCizTDrexe3E31GYBxMp11J6b9.jpg
+                  "/>
+                </div>
+            
+              </div>
             </div>
+            <div ngxSlickItem  class="slide slider_content">
+              <div class = "product-card">
+                <div>
+                  <img (click)="open($event)" src="https://rug.webtech-evolution.com/admin/public/storage/media/tF7tAUeQZ0piFTkCizTDrexe3E31GYBxMp11J6b9.jpg
+                  "/>
+                </div>
+            
+              </div>
+            </div>
+            </ngx-slick-carousel> -->
+              <ngx-slick-carousel class="carousel"
+                #slickModal="slick-carousel"
+                [config]="slideConfigImg">
+                  <div ngxSlickItem class="slide slider_content" *ngFor="let productimg of tempImgs">
+                    <div class = "product-card multiple-items">
+                      <img style="width:100%;height: 100%;" (click)="open($event)" src="{{productimg}}"/>
+                    </div>
+                  </div>
+                </ngx-slick-carousel>  
+               
+            <!-- <ngx-slick-carousel class="carousel"
+            #slickModal="slick-carousel"
+            [config]="slideConfigImg" *ngFor="let temp2 of tempImgs3.image">
+              <div ngxSlickItem  class="slide slider_content">
+                <div class = "product-card">
+                  <div>
+                    <img (click)="open($event)" src="{{temp2}}"/>
+                  </div>
+                 <div class = 'text-center'>
+                    <h3>Plush Texture</h3>
+                  </div> -->
+                <!-- </div>
+              </div>
+          
+            </ngx-slick-carousel>  -->
+
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 product_col">
@@ -116,6 +164,7 @@
                   <label for="varient2">{{varient2 | titlecase}}</label>
                 </div>
               </div>
+              
               <div *ngIf="productVariation.attribute3[0] != '' && productVariation.attribute3[1].variantnumber != 38" class = "sizes">
                 <label for="variant3"  class = "varient_label">
                   <h6 class = "mb-1">{{productVariation.attribute3[1].variant_tag}}:</h6>
@@ -158,7 +207,7 @@
               <ng-template #variant3>
                 <div *ngIf="productVariation.attribute3[1].variantnumber == 38; else variant4" class = "sizes">
                   <label for="sizevariant3"  class = "varient_label">
-                    <h6 class = "mb-1">{{productVariation.attribute3[1].variant_tag}}:</h6>
+                    <h6 class = "mb-1">{{productVariation.attribute3[1].variant_tag}}:</h6><p></p>
                   </label>
                   <div *ngFor="let s2 of productVariation.attribute3[0]" class="size_list">
                     <input type="radio" value="{{s2}}" name="size" formControlName="size" (change)="changeVariation()">
@@ -237,7 +286,7 @@
           </div>
           <!-----Product Variation End---->
           <div class = 'text-center'>
-            <button class="btn blue-btn" (click)="addtoCart()">Add to Cart</button>
+            <button class="btn blue-btn" (click)="addtoCart()" [disabled]="!showAddCart ">Add to Cart</button>
           </div>
           <div class="customize-btn">
             <button class="border-btn" type="button" data-bs-toggle="modal" data-bs-target="#CustomizeModal">Customize</button>
@@ -361,6 +410,8 @@
     <div class = "container-fluid">
     </div>
   </section>
+  
+  
   <!----------Product Details Section Ends---------->
   <!----------Product slider Section Starts---------->
   <section id = "product-detail-slider" *ngIf="relatedProducts != ''">
@@ -387,6 +438,7 @@
       </ngx-slick-carousel>
     </div>
   </section>
+
   <!----------Product slider Section Ends---------->
   <hr class = "section_hr">
   <!----------Product Swatch Section Ends---------->
