--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -1,3 +1,13 @@
+<style>
+   .slider-for .slick-arrow{
+  
+  left: 0 !important;
+  z-index: 5;
+
+}
+
+</style>
+
 <!-------------
   <div class="container">
     <div class="row">
@@ -95,16 +105,24 @@
               </div>
             </div>
             </ngx-slick-carousel> -->
-              <ngx-slick-carousel class="carousel"
+              <ngx-slick-carousel class="carousel slider-for"
                 #slickModal="slick-carousel"
-                [config]="slideConfigImg">
+                [config]="slideConfigImg" (afterChange)="afterChange($event)">
                   <div ngxSlickItem class="slide slider_content" *ngFor="let productimg of tempImgs">
                     <div class = "product-card multiple-items">
                       <img style="width:100%;height: 100%;" (click)="open($event)" src="{{productimg}}"/>
                     </div>
                   </div>
                 </ngx-slick-carousel>  
-               
+              <ngx-slick-carousel class="carousel slider-nav"
+                #slickModal="slick-carousel"
+                [config]="thumbnailConfigImg">
+                  <div ngxSlickItem class="slide slider_content" *ngFor="let productimg of tempImgs">
+                    <div class = "product-card multiple-items1">
+                      <img style="width:100%;height: 50%;"  src="{{productimg}}"/>
+                    </div>
+                  </div>
+                </ngx-slick-carousel>  
             <!-- <ngx-slick-carousel class="carousel"
             #slickModal="slick-carousel"
             [config]="slideConfigImg" *ngFor="let temp2 of tempImgs3.image">
@@ -128,9 +146,17 @@
             <h2 class = "mb-0">{{product.title}}</h2>
             <!-- <h6>Available in 100 colorways</h6> -->
             <div class = "pt-2">
+
               <h6 class = "mb-0">Description</h6>
-              <p [innerHTML]="product.description"></p>
+              <!-- {{product.description}} -->
+              <p [innerHTML]="truncateHTML(product.descripation)">
+                
+              </p>
+              <button class="badge badge-dark text-dark"   data-bs-toggle="modal" data-bs-target="#ReadMoreModal">Read More</button>
+
             </div>
+           
+          
             <div class = "d-flex justify-content-between py-2">
               <div class = "product-quantity">
                 <button type = "button" class = "minus" (click) = minus()>-</button>
@@ -369,6 +395,28 @@
           </div>
         </div>
       </div>
+      <!--
+        read more modal
+      -->
+
+      <div class="modal fade"id="ReadMoreModal" style=" height: 400px;overflow-y: auto;
+      overflow-x: hidden;" tabindex="-1" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">{{product.title }}</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p [innerHTML]="product.descripation"></p>
+            </div>
+           
+          
+          </div>
+        </div>
+      </div>
+
+
       <div class="product_detail" *ngIf="product.productfaq != ''">
         <nav class = "pt-3">
           <div class="nav nav-tabs gap-2" id="nav-tab" role="tablist">
