--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -50,7 +50,7 @@
       <div class="col-md-12">
         <div class="row">
           <div class="col-lg-3 col-md-6 col-sm-6 col12" *ngFor="let product of product">
-            <a [routerLink]="['/product-detail', product.id]">
+            <a [routerLink]="['/product-detail', product.url]">
               <div class = "card card-body p-0">
                 <div class="content-overlay"></div>
                 <hr class = "section_hr">
